# digifortlabs

./: .dockerignore  .env.example  .gitignore  AI_COLLABORATION_HUB.md  AWS_CREDENTIALS_GUIDE.md  AWS_GUIDE.md  CLOUD_SETUP.sh  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  DEPLOYMENT.md  DigifortScanner.spec  README.md  SAFE_DEPLOY.sh  audit_s3.py  audit_storage_live.py  backup_all.bat  build_scanner.bat  check_db.py  check_failed_files.py  check_prod_users.py  check_users.py  cleanup_missing.py  cleanup_s3_drafts.sh  cli.bat  count_data.py  debug_patient.py  debug_patients.py  decrypt_backup.py  deploy_prod.sh  digifortlabs.conf  docker-compose.prod.yml  docker-compose.yml  ec2_check.sh  ec2_cleanup.sh  extract_readme.py  extracted_readme.txt  find_lost_files.py  fix_cors.py  fix_deployment.sh  fix_ownership.sql  (+36 more)
backend/: .dockerignore  .env.example  Dockerfile  add_columns_pg.py  add_dental_identifiers.py  add_mother_column.py  add_payment_columns.py  alter_db.py  analyze_h1_drafts.py  apply_master_schema.py  apply_migration.py  check_counts.py  check_db_d45536.py  check_db_latest.py  check_db_local.py  check_db_patient.py  check_db_remote.py  check_db_schema.py  check_drafts.py  check_names.py  check_otp_status.py  check_otp_table.py  check_recovered.py  check_s3.py  check_sqlite_tables.py  check_status.py  create_admin.py  create_appointment_tables.py  create_ent_tables.py  create_final_dental_tables.py  create_initial_data.py  create_local_admin.py  create_tables.py  create_test_users.py  database_schema.sql  db_dump.txt  debug_files.py  debug_hospital.py  (+47 more)
(+270 files in other folders)
