[project]
name = "digifortlabs-backend"
version = "0.1.0"
description = "Digifort Labs Backend"
requires-python = ">=3.8"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
